stream was collecting to an unmodifable list and the it modified it (it was working anyway XD)