@@ -16,6 +16,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/informations")
@@ -36,7 +37,7 @@ public class InformationController {
         if (categoryFilter != null)
             informations = informations.stream()
                     .filter(information -> information.getCategory().getName().equals(categoryFilter))
-                    .toList();
+                    .collect(Collectors.toList());
         if (sort != null) {
             switch (sort) {
                 case "name-ascending" -> informations.sort(Comparator.comparing(Information :: getTitle));
